--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,5 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Welcome to SaiSucharitha Konakanchi 
+  button(type="button", class="btn btn-success") Press Me
