--- a/views/index.pug
+++ b/views/index.pug
@@ -3,4 +3,14 @@ extends layout
 block content
   h1= title
   p Welcome to SaiSucharitha Konakanchi 
-  button(type="button", class="btn btn-success") Press Me
+  button(type="button",onclick="doReduce()" class="btn btn-success") Press Me
+  #reduce Reduce the value
+  script.
+    var count = 20
+    var change = -1
+    function doReduce(){
+     count = count + change
+      change = change -1
+      let resultdiv = document.getElementById('reduce')
+      resultdiv.innerHTML=`Count ${count} with bump ${change}`
+    }
