--- a/views/peacock.pug
+++ b/views/peacock.pug
@@ -14,7 +14,7 @@ block content
         "age": 2
       },
       {
-        "peacock_species": " Indian peafoul",
+        "peacock_species": " black peafoul",
         "feather_color": "brightblue",
         "age": 3
       },
