--- a/views/index.pug
+++ b/views/index.pug
@@ -12,5 +12,5 @@ block content
      count = count + change
       change = change -1
       let resultdiv = document.getElementById('reduce')
-      resultdiv.innerHTML=`Count ${count} with bump ${change}`
+      resultdiv.innerHTML=`Count ${count} with change ${change}`
     }
