link to the render has been provided

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,6 +5,8 @@ block content
   p Welcome to SaiSucharitha Konakanchi 
   button(type="button",onclick="doReduce()" class="btn btn-success") Press Me
   #reduce Reduce the value
+
+  a(href="/peacock") peacock 
   script.
     var count = 20
     var change = -1
