--- a/views/peacock.pug
+++ b/views/peacock.pug
@@ -1,19 +1,16 @@
 extends layout
 
 block content
-  - let items = results
+  - let peacocks  = results
   h1= title
-  .container-fluid 
-    .row 
-      each cin in items
-        div(class="col-md-2" style=`background-color:black;color: green;font-family: "times";border: 7px solid yellow;border-radius: 14px; padding: 10px; border-inline-style: dotted; box-shadow: 9px 9px 9px rgba(0, 0, 0, 0.5)` onclick=`buy(${items.indexOf(cin)})`) 
-          p.
-           peacock_species -  #{cin.peacock_species}
-          p.
-           feather_color -  #{cin.feather_color}
-          p.
-           age  -  #{cin.age}
+  div(class="container-fluid")
+  div(class="row m-1")
+    each peacock  in peacocks 
+      - let destination = `dispatch(\"/peacock/update?id=${peacock._id}\")`
+      div(class="row-sm-2", class="m-1") Peacock #{peacock.peacock_species}(#{peacock.feather_color}) is #{peacock.age} 
+        button.btn( class="btn-primary ml-1", onclick= destination) Update
+
   script.
-    function buy(index){
-      alert("You purchased item "+index)
+    function dispatch(path){
+      window.location.href=path
     }
