--- a/views/index.pug
+++ b/views/index.pug
@@ -1,18 +1,12 @@
-extends layout
-
-block content
-  h1= title
-  p Welcome to SaiSucharitha Konakanchi 
-  button(type="button",onclick="doReduce()" class="btn btn-success") Press Me
-  #reduce Reduce the value
-
-  a(href="/peacock") peacock 
-  script.
-    var count = 20
-    var change = -1
-    function doReduce(){
-     count = count + change
-      change = change -1
-      let resultdiv = document.getElementById('reduce')
-      resultdiv.innerHTML=`Count ${count} with change ${change}`
-    }
+extends layout 
+ 
+block content 
+  if (!user) 
+    a(href="/login") Login 
+    br 
+    a(href="/register") Register 
+  if (user) 
+    p You are currently logged in as #{user.username} 
+    a(href="/peacock") Take me to peacock 
+    br 
+    a(href="/logout") Logout 
