--- a/views/peacockupdate.pug
+++ b/views/peacockupdate.pug
@@ -42,6 +42,6 @@ block content
                 // TODO handle body 
             }).catch((error) => { 
                 // TODO handle error 
-                alert("Update failed " + error ) 
+                alert("Update failed,check for the details if they are valid "  + error ) 
             }); 
         });
